--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -88,3 +88,29 @@ body {
 .login-box a:hover {
   color: #fff;
 }
+
+
+/* The alert message box */
+.alert {
+  
+  background-color: #b80f22; /* Red */
+  color: white;
+  margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+}
