--- a/templates/user/inicio.html
+++ b/templates/user/inicio.html
@@ -21,6 +21,16 @@
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         {{ form.password }}
+
+       
+        {% if form.non_field_errors %}
+      <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        {{ form.non_field_errors }}
+      </div>
+      {% endif %}
+ 
+        
         <input type="submit" value="Iniciar">
       </form>
     </div>
