--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static 'styles/ventas.css' %}">
 <script src="https://kit.fontawesome.com/7fed639e7f.js" crossorigin="anonymous"></script>
     <section class="header">
-      <h2 class="ventas">Ventas</h2>
+      <h2 class="ventas">Inventario</h2>
        <nav class="btn">
           <a class="agregar" href="{% url 'ventas_app:formulario' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
